<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright 2010-2015 Alohar Mobile Inc.
 * All Rights Reserved.
 * Contains Proprietary, Confidential & Trade Secret Information of Alohar Mobile Inc.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/listitem_padding">

    <TextView
        style="@style/TextViewDescription"
        android:text="@string/intro_realtime_events"
        android:id="@+id/introduction_places"
        android:layout_marginBottom="5dp"/>

    <TextView
        style="@style/TextViewLabel"
        android:text="@string/realtime_event_notification_switch_label"
        android:padding="@dimen/listitem_padding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/listitem_padding"
        android:paddingRight="@dimen/listitem_padding"
        android:paddingBottom="@dimen/listitem_padding"
        android:paddingTop="4dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/listitem_padding"
            android:text="@string/realtime_event_notification"
            android:textSize="16sp" />
        <Switch
            android:id="@+id/notification_switch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:thumb="@drawable/apptheme_switch_inner_holo_light"
            android:track="@drawable/apptheme_switch_track_holo_light"/>
    </LinearLayout>

    <TextView
        style="@style/TextViewLabel"
        android:text="@string/realtime_event_notifications_label"
        android:padding="@dimen/listitem_padding"
        android:layout_marginBottom="5dp"/>

    <ListView
        android:id="@+id/events_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/list_divider"
        android:dividerHeight="1dp">
    </ListView>

</LinearLayout>
